--- a/index.html
+++ b/index.html
@@ -2,50 +2,102 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Змейка в Телеграм</title>
     <style>
-        body { text-align: center; font-family: Arial, sans-serif; background: #282c34; color: white; }
-        canvas { background: black; display: block; margin: auto; }
-        #score { font-size: 20px; margin-top: 10px; }
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+            background: #282c34;
+            color: white;
+            overflow: hidden;
+        }
+        canvas {
+            background: black;
+            display: block;
+            margin: auto;
+        }
+        #score {
+            font-size: 20px;
+            margin-top: 10px;
+        }
+        .controls {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+        .btn {
+            background: #444;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin: 5px;
+            font-size: 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .btn:active {
+            background: #666;
+        }
     </style>
 </head>
 <body>
     <h1>🐍 Змейка в Telegram</h1>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <p id="score">Счёт: 0</p>
+    <canvas id="gameCanvas"></canvas>
+    <p id="score">Счёт: 0 | Рекорд: 0</p>
+
+    <!-- Кнопки управления (для мобильных) -->
+    <div class="controls">
+        <button class="btn" onclick="changeDirection(38)">⬆️</button>
+    </div>
+    <div class="controls">
+        <button class="btn" onclick="changeDirection(37)">⬅️</button>
+        <button class="btn" onclick="changeDirection(40)">⬇️</button>
+        <button class="btn" onclick="changeDirection(39)">➡️</button>
+    </div>
 
     <script>
         const canvas = document.getElementById("gameCanvas");
         const ctx = canvas.getContext("2d");
 
-        let snake = [{ x: 200, y: 200 }];
-        let dx = 20, dy = 0;
-        let food = { x: 100, y: 100 };
-        let score = 0;
+        // Определяем размер для мобильных устройств
+        const tileSize = 20;
+        canvas.width = Math.min(window.innerWidth - 20, 400);
+        canvas.height = Math.min(window.innerHeight - 100, 400);
 
-        document.addEventListener("keydown", changeDirection);
+        let snake = [{ x: 200, y: 200 }];
+        let dx = tileSize, dy = 0;
+        let food = randomFood();
+        let score = 0;
+        let bestScore = localStorage.getItem("bestScore") || 0;
+        let speed = 150; // Начальная скорость
+        let gameRunning = true;
+
+        document.addEventListener("keydown", (event) => changeDirection(event.keyCode));
 
         function gameLoop() {
+            if (!gameRunning) return;
+
             let head = { x: snake[0].x + dx, y: snake[0].y + dy };
 
             if (head.x < 0 || head.y < 0 || head.x >= canvas.width || head.y >= canvas.height || isCollision(head)) {
-                alert("Игра окончена! Ваш счёт: " + score);
-                document.location.reload();
+                gameOver();
                 return;
             }
 
             snake.unshift(head);
             if (head.x === food.x && head.y === food.y) {
                 score++;
-                document.getElementById("score").textContent = "Счёт: " + score;
+                document.getElementById("score").textContent = `Счёт: ${score} | Рекорд: ${bestScore}`;
                 food = randomFood();
+                speed = Math.max(speed - 5, 50); // Ускорение игры
+                playSound("eat");
             } else {
                 snake.pop();
             }
 
             draw();
-            setTimeout(gameLoop, 100);
+            setTimeout(gameLoop, speed);
         }
 
         function draw() {
@@ -53,29 +105,46 @@
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
             ctx.fillStyle = "lime";
-            snake.forEach(part => ctx.fillRect(part.x, part.y, 20, 20));
+            snake.forEach(part => ctx.fillRect(part.x, part.y, tileSize, tileSize));
 
             ctx.fillStyle = "red";
-            ctx.fillRect(food.x, food.y, 20, 20);
+            ctx.fillRect(food.x, food.y, tileSize, tileSize);
         }
 
-        function changeDirection(event) {
-            const key = event.keyCode;
-            if (key === 37 && dx === 0) { dx = -20; dy = 0; }
-            if (key === 38 && dy === 0) { dx = 0; dy = -20; }
-            if (key === 39 && dx === 0) { dx = 20; dy = 0; }
-            if (key === 40 && dy === 0) { dx = 0; dy = 20; }
+        function changeDirection(keyCode) {
+            if (keyCode === 37 && dx === 0) { dx = -tileSize; dy = 0; }
+            if (keyCode === 38 && dy === 0) { dx = 0; dy = -tileSize; }
+            if (keyCode === 39 && dx === 0) { dx = tileSize; dy = 0; }
+            if (keyCode === 40 && dy === 0) { dx = 0; dy = tileSize; }
         }
 
         function randomFood() {
             return {
-                x: Math.floor(Math.random() * 20) * 20,
-                y: Math.floor(Math.random() * 20) * 20
+                x: Math.floor(Math.random() * (canvas.width / tileSize)) * tileSize,
+                y: Math.floor(Math.random() * (canvas.height / tileSize)) * tileSize
             };
         }
 
         function isCollision(head) {
             return snake.some(segment => segment.x === head.x && segment.y === head.y);
+        }
+
+        function gameOver() {
+            gameRunning = false;
+            playSound("gameover");
+            if (score > bestScore) {
+                bestScore = score;
+                localStorage.setItem("bestScore", bestScore);
+            }
+            setTimeout(() => {
+                alert(`Игра окончена! Ваш счёт: ${score}`);
+                location.reload();
+            }, 500);
+        }
+
+        function playSound(type) {
+            let sound = new Audio(type === "eat" ? "https://www.fesliyanstudios.com/play-mp3/387" : "https://www.fesliyanstudios.com/play-mp3/383");
+            sound.play();
         }
 
         gameLoop();
