--- a/index.html
+++ b/index.html
@@ -5,52 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Змейка</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             text-align: center;
             font-family: 'Arial', sans-serif;
             background: #121212;
             color: #ffffff;
-            overflow: hidden;
             display: flex;
             flex-direction: column;
             align-items: center;
+            height: 100vh;
+            overflow: hidden;
         }
 
         #score-container {
-            margin-top: 20px;
+            margin-top: 10px;
         }
 
         #current-score {
-            font-size: 40px;
+            font-size: 5vh;
             font-weight: bold;
             color: #00ff99;
         }
 
         #goal-score {
-            font-size: 20px;
+            font-size: 2vh;
             color: #ffffff;
+        }
+
+        /* ✅ Делаем CANVAS адаптивным */
+        #canvas-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-grow: 1;
+            width: 100%;
         }
 
         canvas {
             background: #1e1e1e;
-            margin-top: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            max-width: 95vw;
+            max-height: 60vh;
         }
 
         .controls {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 20px;
+            margin-bottom: 10px;
+            gap: 5px;
         }
 
         .control-btn {
             background: #292929;
-            width: 70px;
-            height: 70px;
+            width: 15vw;
+            height: 15vw;
+            max-width: 70px;
+            max-height: 70px;
             border: none;
-            margin: 5px;
             border-radius: 15px;
             display: flex;
             align-items: center;
@@ -66,14 +85,15 @@
         }
 
         .control-btn svg {
-            width: 40px;
-            height: 40px;
+            width: 40%;
+            height: 40%;
             fill: #00ff99;
         }
 
         .controls .row {
             display: flex;
             justify-content: center;
+            gap: 5px;
         }
 
         #game-over-screen {
@@ -121,7 +141,9 @@
         <div id="goal-score">Score 10 to get TOP</div>
     </div>
 
-    <canvas id="gameCanvas"></canvas>
+    <div id="canvas-container">
+        <canvas id="gameCanvas"></canvas>
+    </div>
 
     <div class="controls">
         <div class="row">
@@ -154,12 +176,17 @@
         const gameOverScreen = document.getElementById("game-over-screen");
         const finalScoreElement = document.getElementById("final-score");
 
-        const tileSize = 20;
-        canvas.width = 400;
-        canvas.height = 400;
+        function resizeCanvas() {
+            const size = Math.min(window.innerWidth * 0.95, window.innerHeight * 0.6);
+            canvas.width = size;
+            canvas.height = size;
+        }
 
-        let snake = [{ x: 200, y: 200 }];
-        let dx = tileSize, dy = 0;
+        window.addEventListener("resize", resizeCanvas);
+        resizeCanvas();
+
+        let snake = [{ x: canvas.width / 2, y: canvas.height / 2 }];
+        let dx = 20, dy = 0;
         let food = generateFood();
         let score = 0;
         let gameRunning = true;
@@ -196,44 +223,13 @@
         function draw() {
             ctx.fillStyle = "#1e1e1e";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            snake.forEach((part, index) => {
-                let opacity = 1 - (index / snake.length) * 0.6;
-                ctx.fillStyle = `rgba(0, 255, 153, ${opacity})`;
-                ctx.fillRect(part.x, part.y, tileSize, tileSize);
-            });
-
-            ctx.fillStyle = "#ff00ff";
-            ctx.beginPath();
-            ctx.arc(food.x + tileSize / 2, food.y + tileSize / 2, tileSize / 2, 0, Math.PI * 2);
-            ctx.fill();
         }
 
         function changeDirection(keyCode) {
-            if (keyCode === 37 && dx === 0) { dx = -tileSize; dy = 0; }
-            if (keyCode === 38 && dy === 0) { dx = 0; dy = -tileSize; }
-            if (keyCode === 39 && dx === 0) { dx = tileSize; dy = 0; }
-            if (keyCode === 40 && dy === 0) { dx = 0; dy = tileSize; }
-        }
-
-        function showGameOver() {
-            finalScoreElement.textContent = score;
-            gameOverScreen.style.display = "block";
-        }
-
-        function restartGame() {
-            location.reload();
-        }
-
-        function generateFood() {
-            return {
-                x: Math.floor(Math.random() * (canvas.width / tileSize)) * tileSize,
-                y: Math.floor(Math.random() * (canvas.height / tileSize)) * tileSize
-            };
-        }
-
-        function isCollision(head) {
-            return snake.some(segment => segment.x === head.x && segment.y === head.y);
+            if (keyCode === 37 && dx === 0) { dx = -20; dy = 0; }
+            if (keyCode === 38 && dy === 0) { dx = 0; dy = -20; }
+            if (keyCode === 39 && dx === 0) { dx = 20; dy = 0; }
+            if (keyCode === 40 && dy === 0) { dx = 0; dy = 20; }
         }
 
         gameLoop();
